# py-cookbook

./: Dockerfile  README.md  app.py
docs/: interpreter_compiler.md  linting.md  package_module.md
examples/: pyproject.toml  requirements.txt
